style.css
body {
  margin: 0px;
  padding: 0;
  padding-top: 0px;
  padding-left: 0px;
  padding-right: 0px;
  top: 0px;
  overflow-y: hidden;
  overflow-x: overlay;
  scrollbar-width: none;
  /* -ms-overflow-style: none; */
  padding-bottom: 0px;
}

body::-webkit-scrollbar {
  width: 5px;
  height: 8px;
  background-color: rgba(0,0,0,0);; /* or add it to the track */
}

/* Add a thumb */
body::-webkit-scrollbar-thumb {
  background: #fff9e0;
}

#poem_text::-webkit-scrollbar {
  width: 5px;
  height: 8px;
  background-color: rgba(0,0,0,0);; /* or add it to the track */
}

#poem_text::-webkit-scrollbar-thumb {
  background: #fff9e0;
}

p {
  color: #fff9e0;
}


.big {
  top: 0px;
  margin: 0px;
  padding: 0;
  display: flex;
}

#bgl {
  max-height: 100vh;
  height:100vh;
  min-height: 100vh;
  flex-direction: row;
}

#bgr {
  max-height: 100vh;
  height:100vh;
  min-height: 100vh;
  flex-direction: row;
}

#bgl2 {
  max-height: 100vh;
  height:100vh;
  min-height: 100vh;
  flex-direction: row;
}

#bgr2 {
  max-height: 100vh;
  height:100vh;
  min-height: 100vh;
  flex-direction: row;
}


#title {
  position: absolute;
  height: 45px;
  padding-top: 20%;
  padding-left: 50%;
  z-index: 998;
}

#flowers {
  height:713px;
  width: 471px;
  position: absolute;
  font-size: 14px;
  z-index: 997;
  font-family: Georgia;
  padding-top: 7%;
  padding-left: 110%;
}

.poem {
  height:365px;
  width: 400px;
  position: absolute;
  z-index: 997;
  padding-top: 20%;
  padding-left: 260%;
  overflow-y: hidden;
  font-size: 14px;
}

#poem_title {
  padding-top: 17%;
  padding-left: 260%;
  z-index: 997;
  position: absolute;
  width:400px;
  font-size: 17px;
  font-family: Georgia;
  font-style: italic;
}

#poem_text {
  position: absolute;
  height: 300px;
  width: inherit;
  padding-top: 20px;
  font-size: 14px;
  font-family: Georgia;
  overflow-y: auto;
  color: #fff9e0;
}

.img1 {
  position: absolute;
  background: white;
  padding: 0px;
  height:100vh;
  width: 100%;
  z-index: 997;
  left: 350%;
  bottom:0;
}

.img2 {
  position: absolute;
  background: white;
  padding: 0px;
  height:100vh;
  width: 100%;
  z-index: 997;
  left: 550%;
  bottom:0;

}

#chair_title {
  z-index: 997;
  position: absolute;
  width:400px;
  font-size: 17px;
  font-family: Georgia;
  font-style: italic;
  top: 15%;
  left: 750%;
}

#chair_text {
  z-index: 997;
  position: absolute;
  width:400px;
  height: 541px;
  font-size: 14px;
  font-family: Georgia;
  top: 21%;
  left: 750%
}

/* last text width:346, height: 541 */


/* for the info menu */
.top {
  position: fixed;
  width:50%;
}

.info {
  position: fixed;
  font-size: 26px;
  color: white;
  z-index: 999;
  top: 10px;
  right: 10px;
	padding:0px 0px;
	margin-left:0px;
	margin-top:0px;
	margin-bottom:0px;
}

#tag-menu {
	display:none;
}


#tag-menu:checked ~ div.drawer {
 animation: slide-out 0.5s ease;
 animation-fill-mode: forwards;
}

/* linear-gradient(to right, , rgba(255,0,0,0)); */
.drawer {
  background: radial-gradient(farthest-corner at 60% 55%, rgba(255, 255, 255, 1),rgba(255, 255, 255, 0.75),rgba(255,0,0,0));
	position:fixed;
  top: 0;
	right:-500px;
	height:100%;
	z-index:999;
	width:450px;
	animation: slide-in 0.5s ease;
	animation-fill-mode: forwards;
  margin-top: 0px;
  overflow-y: hidden;
  /* eventually make scroll within a div */
}

.text {
  text-align: justify;
  margin-top: 200px;
  margin-left: 25px;
  margin-right: 25px;
  margin-bottom: 30px;
  font-size: 15px;
  overflow-y: auto;
  height: 75vh;
}

@keyframes slide-in {
 from {right: 0px;}
 to {right: -450px;}
}

@keyframes slide-out {
 from {right: -450px;}
 to {right: 0px;}
}

